<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete_segment"
        android:title="@string/menu_delete_segment"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/menu_theme"
        android:title="@string/menu_theme"
        android:icon="@drawable/ic_theme_auto"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_theme_auto"
                android:title="@string/menu_theme_auto"
                android:icon="@drawable/ic_theme_auto"/>
            <item
                android:id="@+id/menu_theme_light"
                android:title="@string/menu_theme_light"
                android:icon="@drawable/ic_theme_light"/>
            <item
                android:id="@+id/menu_theme_dark"
                android:title="@string/menu_theme_dark"
                android:icon="@drawable/ic_theme_dark"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_language"
        android:title="语言 / Language"
        android:icon="@drawable/ic_language"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_lang_cn"
                android:title="简体中文" />
            <item
                android:id="@+id/menu_lang_en"
                android:title="English" />
        </menu>
    </item>
</menu>
